tests/paczka1/fuzzy1/70065990.err
Error in line 11: VnDLiuT S962 23,2
Error in line 17: 3DvC S962 35,3
Error in line 27: jaJ5mY S211 59,4
Error in line 34: XTOT S962 31,0
Error in line 39: VnDLiuT S962 80,3
